resolved conflicts with versions